# ALPSCore

./: .cvsignore  .gitignore  .travis.yml  .zenodo.json  ACKNOWLEDGE.TXT  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.TXT  HEADER.TXT  INSTALL.md  Jenkinsfile  LICENSE.TXT  Makefile.am  Makefile.in  README.md  README.txt  alea.h  bitops.h  cctype.h  config.h  config.h.in  copyright.C  copyright.C.in  copyright.h  encode.cpp  encode.hpp  evaluator.C  evaluator.h  expression.C  expression.h  expression2.h  expression2_impl.h  expression_impl.h  factory.h  fixed_capacity_deque.h  fixed_capacity_fwd.h  fixed_capacity_traits.h  fixed_capacity_vector.h  functional.h  h5archive.hpp  (+31 more)
accumulator/: CMakeLists.txt  count.cpp  mean.cpp
alea/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  abstractbinning.h  abstractsimpleobservable.h  abstractsimpleobservable.ipp  alps-alea.pc.in  binned_data.C  binned_data.h  binned_data.hpp  binned_data.output  binned_data.test.C  binned_data.test.input1  binned_data.test.input2  complexobservable.C  convergence.hpp  detailedbinning.C  detailedbinning.h  detailedbinning.output  dumpbench.C  hdf5.h  histogram.C  histogram.h  histogram.output  histogramdata.h  histogrameval.h  mcanalyze.C  mcanalyze.hpp  mcdata.C  mcdata.hpp  mcdata.output  mcdata2.C  mcdata2.output  mergeobs_divide.C  mergeobs_log.C  mergeobs_plus.C  mergeobs_plus2.C  mergeobs_times.C  (+50 more)
fixed_capacity/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  checking.h  deque_detail.h  fixed_capacity_deque.C  fixed_capacity_deque.output  fixed_capacity_traits.C  fixed_capacity_vector.C  fixed_capacity_vector.output  test_deque.C  test_deque.output  test_main.h  test_vector.C  timing_queue.C  timing_stack.C  timing_vector.C  uninitialized_array.h
graph/: CMakeLists.txt  Jamroot  canonical_graph.hpp  canonical_label_random_graphs_test.cpp  canonical_label_test.cpp  canonical_label_test.output  canonical_label_with_color_symmetries_test.cpp  canonical_label_with_color_symmetries_test.output  canonical_properties.hpp  canonical_properties_traits.hpp  colored_lattice_constant_test.cpp  colored_lattice_constant_test2.cpp  embedding.hpp  embedding_test.C  embedding_test.cpp  embedding_test.output  is_embeddable.hpp  is_embeddable_with_color_symmetries_test.cpp  is_embeddable_with_color_symmetries_test.output  iso_simple.cpp  lattice_constant.hpp  lattice_constant_2d.hpp  lattice_constant_debug.hpp  lattice_constant_matrix.cpp  lattice_constant_test.cpp  nauty.hpp  nisy.hpp  nisy_impl.hpp  non_iso_graph_generation_colored_edges.C  orbit_test.cpp  subgraph_generator.hpp  subgraph_generator_test.cpp  subgraph_generator_test.output  subgraph_generator_test2.cpp  subgraph_generator_test_colored_edges.cpp  subgraph_generator_test_colored_edges.output  subgraph_generator_test_colored_edges2.cpp  subgraph_generator_test_colored_edges_with_sym.cpp  subgraph_generator_test_colored_edges_with_sym.output  subgraphs.hpp  (+7 more)
hdf5/: CMakeLists.txt  Makefile.am  Makefile.in  alea.C  alea.output  alea2.C  alea_mocasito.C  alea_mocasito2.C  alps-hdf5.pc.in  archive.cpp  archive.hpp  array.hpp  attr.cpp  complex.hpp  container.def  container_impl.hpp  creator.hpp  data.cpp  h5alea.cpp  h5alea.output  h5attribute.cpp  h5boostarray.cpp  h5carray.cpp  h5class.cpp  h5discontinous.cpp  h5enum.cpp  h5groups.cpp  h5multiarray.cpp  h5overwrite.cpp  h5pair.cpp  h5ptr.cpp  h5scalar.cpp  h5string.cpp  h5ubalsvector.cpp  h5ublasvector.cpp  h5valarray.cpp  h5vector.cpp  hdf5.cpp  hdf5_alea.cpp  hdf5_alea.output  (+43 more)
lattice/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  bond_compare.h  boundary.h  cell_traits.h  coloring.C  coloring.input  coloring.output  coordinate_traits.h  coordinatelattice.h  dimensional_traits.h  disorder.C  disorder.h  example1.C  example1.input  example1.output  example10.C  example10.output  example11.C  example11.output  example2.C  example2.input  example2.output  example3.C  example4.C  example4.output  example5.C  example5.output  example6.C  example6.output  example7.C  example7.input  example7.output  example8.C  example8.input  example8.output  example9.C  (+32 more)
mc/: CMakeLists.txt
mocasito/: CMakeLists.txt  Makefile.am  Makefile.in  alea_mocasito.C  alea_mocasito.cpp  alea_mocasito.output  io.C
model/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  TODO  TODO.txt  basis.h  basisdescriptor.h  basisstates.h  blochbasisstates.h  bondoperator.h  bondterm.C  bondterm.h  default_term.h  example1.C  example1.input  example1.output  example10.C  example10.input  example10.output  example11.C  example12.C  example12.input  example12.output  example13.C  example13.input  example13.output  example14.C  example14.output  example15.C  example15.output  example16.C  example16.input  example16.output  example17.C  example17.input  example17.output  example18.C  example18.output  (+50 more)
ngs/: CMakeLists.txt  accumulator_set.hpp  alea.hpp  api.cpp  api.hpp  atomic.hpp  base.hpp  boost.hpp  boost_mpi.hpp  boost_python.hpp  callback.hpp  cast.hpp  config.hpp  convert.hpp  hash.hpp  hdf5.hpp  hdf5_errors.hpp  histogramobservable.hpp  ising.hpp  macros.hpp  main.cpp  make_deprecated_parameters.hpp  make_parameters_from_xml.hpp  mcatomic.hpp  mcbase.cpp  mcbase.hpp  mcdeprecated.cpp  mcdeprecated.hpp  mchdf5.cpp  mchdf5.hpp  mcmpisim.hpp  mcobservable.cpp  mcobservable.hpp  mcobservables.cpp  mcobservables.hpp  mcoptions.cpp  mcoptions.hpp  mcparams.cpp  mcparams.hpp  mcresult.cpp  (+38 more)
numeric/: CMakeLists.txt  abs2.hpp  accumulate_if.hpp  basis_functions.hpp  conj.hpp  diagonal_matrix.hpp  double2int.hpp  fourier.hpp  functional.hpp  general_matrix.h  is_negative.hpp  is_positive.hpp  is_zero.hpp  isinf.hpp  isnan.hpp  matrix.h  matrix.hpp  matrix_algorithms.C  matrix_deprecated_hdf5_format_test.C  matrix_deprecated_hdf5_format_test.output  matrix_hdf5.C  matrix_transpose_view.C  matrix_unit_tests.C  matrix_unit_tests.hpp  outer_product.hpp  polynomial.hpp  real.hpp  real_tests.C  real_tests.output  regression.hpp  round.hpp  scalar_product.hpp  vector.h  (+10 more)
(+2268 files in other folders)
